<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.circleMusic.homeScreen"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_show"
            android:textSize="30sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:id="@+id/subTitle"
            android:textSize="12sp"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/special_tag"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            
                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="14dp"
                    android:background="@drawable/information"
                    android:id="@+id/information"
                    />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/SpecialRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:scrollbars="horizontal">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playlists_tag"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/PlaylistsRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:scrollbars="horizontal">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/tracks_tag"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/TracksRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:overScrollMode="never"
            android:scrollbars="vertical">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="360dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="25dp"
        >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:clickable="true"
            android:scaleType="centerCrop"
            android:id="@+id/googleImage"
            android:src="@drawable/neonmusicicon"
            />

    </androidx.cardview.widget.CardView>
</FrameLayout>
