<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.circleMusic.nowPlaying"
    android:id="@+id/nowplayingbackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/leftarrow"
            android:id="@+id/back"
        />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="285dp"
            android:src="@drawable/plus"
            android:id="@+id/add"
            />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        app:cardCornerRadius="40dp"
        >
        <ImageView
            android:id="@+id/image"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/neonmusicwithnote"
            />

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textAlignment="center"
        android:text="@string/song_name"
        android:id="@+id/title"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="15dp"
        android:autoSizeMaxTextSize="25dp"
        android:autoSizeStepGranularity="2sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAlignment="center"
        android:id="@+id/artist"
        android:textColor="@color/white"
        android:text="@string/song_artist"
        android:layout_marginTop="5dp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="10dp"
        android:autoSizeMaxTextSize="15dp"
        android:autoSizeStepGranularity="2sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="145dp"
        >

        <TextView
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:id="@+id/seekbarindicator"
            android:textSize="15sp"
            android:text="@string/_00_00"/>

        <SeekBar
            android:id="@+id/seekbar"
            android:layout_margin="16dp"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:id="@+id/duration"
            android:text="@string/_00_00"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="55dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="15dp"
            android:scaleType="centerCrop"
            android:id="@+id/shuffle"
            android:src="@drawable/noshuffle"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:scaleType="centerCrop"
            android:id="@+id/last"
            android:src="@drawable/lastsong"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="22dp"
            android:id="@+id/play"
            android:src="@drawable/playsong"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:scaleType="centerCrop"
            android:id="@+id/next"
            android:src="@drawable/nextsong"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="40dp"
            android:scaleType="centerCrop"
            android:id="@+id/one"
            android:src="@drawable/onenonpressed"/>

    </LinearLayout>


</LinearLayout>